src/objects/Attendance__c.object
<CustomObject>
    <fields>
        <fullName>Confirmed_By__c</fullName>
        <label>Confirmed By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Confirmed_By</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CutOff__c</fullName>
        <label>CutOff</label>
        <referenceTo>CutOff__c</referenceTo>
        <relationshipLabel>Attendance</relationshipLabel>
        <relationshipName>Attendance</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Staff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff</label>
        <referenceTo>Staff__c</referenceTo>
        <relationshipLabel>Attendance</relationshipLabel>
        <relationshipName>Attendance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In</fullName>
                </value>
                <value>
                    <fullName>Half-Day</fullName>
                </value>
                <value>
                    <fullName>Off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UniqueId__c</fullName>
        <formula>Staff__r.Id+ TEXT(Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UniqueId</label>
        <type>Text</type>
    </fields>
    <label>Attendance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CutOff__c</columns>
        <columns>Date__c</columns>
        <columns>Note__c</columns>
        <columns>Staff__c</columns>
        <columns>Type__c</columns>
        <columns>Confirmed_By__c</columns>
        <columns>UniqueId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SA - {0000000}</displayFormat>
        <label>Attendance ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>